# cbmroot

./: CMakeLists.txt  CTestConfig.cmake  CTestCustom.cmake  CbmRoot_test.cmake  Dart.sh  INSTALL  autoinstall_framework.sh
L1/: CMakeLists.txt  CbmL1.cxx  CbmL1.h  CbmL1CATrdTrackFinderSA.cxx  CbmL1Counters.h  CbmL1Def.h  CbmL1MCPoint.h  CbmL1MCTrack.cxx  CbmL1MCTrack.h  CbmL1Performance.cxx  CbmL1ReadEvent.cxx  CbmL1StsHit.h  CbmL1TofMerger.cxx  CbmL1Track.h  CbmL1TrackPar.h  CbmL1TrdTrackFinderSts.cxx  L1AlgoInputData.cxx  L1AlgoInputData.h  L1LinkDef.h  PerformanceConstants.h
L1/L1Algo/: L1AddMaterial.h  L1Algo.cxx  L1Algo.h  L1AlgoTBB.h  L1Branch.h  L1CAMergeClones.cxx  L1CATrackFinder.cxx  L1Event.cxx  L1Event.h  L1EventEfficiencies.h  L1EventMatch.cxx  L1EventMatch.h  L1Extrapolation.h  L1Field.h  L1Filtration.h  L1Grid.cxx  L1Grid.h  L1HitArea.h  L1HitPoint.h  L1HitsSortHelper.cxx  L1HitsSortHelper.h  L1MCEvent.cxx  L1MCEvent.h  L1MaterialInfo.h  L1Portion.h  L1Station.h  L1Strip.h  L1StsHit.h  L1Timer.h  L1Track.h  L1TrackExtender.cxx  L1TrackFitter.cxx  L1TrackPar.h  L1TrackParFit.cxx  L1TrackParFit.h  L1Triplet.h  L1UMeasurementInfo.h  L1XYMeasurementInfo.h
L1/OffLineInterface/: CbmL1MuchFinder.cxx  CbmL1MuchFinderQa.cxx  CbmL1RichENNRingFinderParallel.cxx  CbmL1RichRingQa.cxx  CbmL1StsTrackFinder.cxx  CbmL1StsTrackFinder.h  CbmL1SttTrackFinder.cxx
L1/ParticleFinder/: CbmL1PFFitter.cxx  CbmL1PFFitter.h  CbmL1PFMCParticle.h
MQ/: CMakeLists.txt
MQ/hitbuilder/: CMakeLists.txt  CbmDeviceHitBuilderTof.cxx  CbmDeviceHitBuilderTof.h  MapTofGbtx.par  mTofPar.par  runHitBuilderTof.cxx  startMQSamplerUnpackerParserverHitBuilder.sh.in  startMQ_Mcbm.sh.in  tof_v18j_cosmicHD.digi.par  tof_v18j_cosmicHD.par.root  v18j_cosmicHD.digibdf.par
MQ/parmq/: CMakeLists.txt  ParameterMQServer.cxx  runParameterMQServer.cxx
MQ/sink/: CMakeLists.txt  CbmDevNullSink.cxx  CbmDevNullSink.h  CbmTsaComponentSink.cxx  CbmTsaComponentSink.h  runDevNullSink.cxx  runTsaComponentSink.cxx  startMQSamplerSink.sh.in
MQ/source/: CMakeLists.txt  CbmMQTsaInfo.cxx  CbmMQTsaInfo.h  CbmMQTsaMultiSampler.cxx  CbmMQTsaMultiSampler.h  CbmMQTsaSampler.cxx  CbmMQTsaSampler.h  CbmMQTsaSamplerTof.cxx  CbmMQTsaSamplerTof.h  runTsaInfo.cxx  runTsaMultiSampler.cxx  runTsaSampler.cxx  runTsaSamplerTof.cxx  startMQInfo.sh.in  startMQSampler.sh.in
MQ/unpacker/: CMakeLists.txt  CbmDeviceUnpackTofMcbm2018.cxx  CbmDeviceUnpackTofMcbm2018.h  CbmDeviceUnpackTofStar2018.cxx  CbmDeviceUnpackTofStar2018.h  MapTofHdCosmics_v18c.par  MapTofHdCosmics_v18d.par  runUnpackTofMcbm2018.cxx  runUnpackTofStar2018.cxx  startMQSamplerUnpackerParserver.sh.in
analysis/: AnalysisLinkDef.h  CMakeLists.txt  CbmAnalysisLinkDef.h
analysis/Jpsi/: CbmJpsiTrigger.cxx
analysis/V0/: CbmV0Analysis.cxx
analysis/conversion/: CMakeLists.txt  CbmAnaConversion.cxx  CbmAnaConversion.h  CbmAnaConversionCutSettings.h  CbmAnaConversionGlobalFunctions.h  CbmAnaConversionKF.cxx  CbmAnaConversionKF.h  CbmAnaConversionKinematicParams.h  CbmAnaConversionPhotons.cxx  CbmAnaConversionPhotons.h  CbmAnaConversionPhotons2.cxx  CbmAnaConversionPhotons2.h  CbmAnaConversionReco.cxx  CbmAnaConversionReco.h  CbmAnaConversionRecoFull.cxx  CbmAnaConversionRecoFull.h  CbmAnaConversionRich.cxx  CbmAnaConversionRich.h  CbmAnaConversionTest.cxx  CbmAnaConversionTest.h  CbmAnaConversionTest2.cxx  CbmAnaConversionTest2.h  CbmAnaConversionTomography.cxx  CbmAnaConversionTomography.h  CbmConversionAnalysisLinkDef.h
analysis/conversion2/: CMakeLists.txt  CbmAnaConversion2.cxx  CbmAnaConversion2.h  CbmAnaConversion2BG.cxx  CbmAnaConversion2BG.h  CbmAnaConversion2Fitter.cxx  CbmAnaConversion2Fitter.h  CbmAnaConversion2KF.cxx  CbmAnaConversion2KF.h  CbmAnaConversion2Manual.cxx  CbmAnaConversion2Manual.h  CbmAnaConversion2Reconstruction.cxx  CbmAnaConversion2Reconstruction.h  CbmConversion2AnalysisLinkDef.h
analysis/dielectron/: CMakeLists.txt  CbmAnaDielectronReports.cxx  CbmAnaDielectronReports.h  CbmAnaDielectronStudyReportAll.cxx  CbmAnaDielectronTask.cxx  CbmAnaDielectronTask.h  CbmAnaDielectronTaskDraw.cxx  CbmAnaDielectronTaskDraw.h  CbmAnaDielectronTaskDrawAll.cxx  CbmAnaDielectronTaskDrawAll.h  CbmAnaLmvmDrawStudy.cxx  CbmAnaLmvmDrawStudy.h  CbmDiElectronAnalysisLinkDef.h  CbmHaddBase.cxx  CbmHaddBase.h  CbmLmvmCuts.h  CbmLmvmHadd.cxx  CbmLmvmHadd.h  CbmLmvmHist.cxx  CbmLmvmHist.h  CbmLmvmUtils.h
analysis/flow/: CMakeLists.txt  CbmAnaFlow.cxx  CbmAnaFlow.h  CbmFlowAnalysisLinkDef.h  eventPlane.cxx  eventPlane.h
analysis/hyperon/: CMakeLists.txt  CbmAnaHypMix.cxx  CbmAnaHypRecCascade.cxx  CbmAnaHypRecEff.cxx  CbmAnaHypRecLambda.cxx  CbmAnaHypRecLambda.h  CbmAnaHypSecFinder.cxx  CbmAnaHypSecFinder.h  CbmAnaHypSecFinderQa.cxx  CbmAnaHypSelectLambda.cxx  CbmAnaHypTools.cxx  CbmAnaHypTools.h  CbmAnaHypYPtGenerator.h  CbmHyperonAnalysisLinkDef.h
analysis/jpsiana/: CMakeLists.txt  CbmAnaJpsiCandidate.cxx  CbmAnaJpsiCandidate.h  CbmAnaJpsiCuts.h  CbmAnaJpsiHist.cxx  CbmAnaJpsiHist.h  CbmAnaJpsiReport.cxx  CbmAnaJpsiReport.h  CbmAnaJpsiSuperEvent.cxx  CbmAnaJpsiSuperEvent.h  CbmAnaJpsiSuperEventReport.cxx  CbmAnaJpsiSuperEventReport.h  CbmAnaJpsiTask.cxx  CbmAnaJpsiTask.h  CbmAnaJpsiUtils.h  CbmJPsiAnalysisLinkDef.h
analysis/much/: CMakeLists.txt  CbmAnaAngularAcceptance.cxx  CbmAnaMuch.cxx  (+13 more)
beamtime/: CMakeLists.txt  CbmBeamtimeLinkDef.h  CbmDaqMap.cxx  CbmDaqMapCosy2013.cxx  CbmDaqMapCosy2014.cxx  CbmDaqMapCosy2014.h  CbmDaqMapCosy2014Much.cxx  CbmDaqMap_Cosy2014.cxx  CbmLmdDebug.cxx  CbmLmdDebug.h  CbmMuchDigiTb.cxx  CbmMuchDigiTb.h  CbmSourceLmd.cxx  CbmSourceLmd.h  CbmSourceLmdNew.cxx  CbmSourceLmdNew.h
fles/: Build_Fles_Ipc.cmake  Build_Spadic_Message.cmake  CMakeLists.txt
macro/: CMakeLists.txt
trd/: CMakeLists.txt  CbmTrdCreatePidLike.cxx  CbmTrdCreatePidLike.h  CbmTrdFindHits.cxx  CbmTrdFindTracks.cxx  CbmTrdFitTracks.cxx  CbmTrdLinkDef.h  CbmTrdSetTracksPidANN.cxx  CbmTrdSetTracksPidLike.cxx  CbmTrdSetTracksPidModWkn.cxx  CbmTrdSetTracksPidWkn.cxx  CbmTrdTrackFinderIdeal.cxx  CbmTrdTrackFitterIdeal.cxx  TrdLinkDef.h
tutorials/: CMakeLists.txt
(+4988 files in other folders)
