# add subdirectories
add_subdirectory (papa)
add_subdirectory (much)
add_subdirectory (flow)
add_subdirectory(opencharm)
add_subdirectory(conversion)
add_subdirectory(jpsiana)
add_subdirectory(dielectron)
#add_subdirectory (hyperon)
#add_subdirectory (Jpsi)
#add_subdirectory (V0)
#add_subdirectory (photon)
#add_subdirectory (timing)

